@@ -5,6 +5,7 @@
 Simplest way to compile FASP is "make config; make install". More options:
 
 $ make config           # Configure the building environment
+$ make config CC=gcc    # Configure with a specifice C compiler
 $ make                  # Compile the library
 $ make install          # install FASP libraries and related files
 $ make docs             # Generate the FASP documentation with Doxygen
