@@ -37,11 +37,11 @@ Structure
 [ 1.1.6 ] add uniform I/O routines: Binary and ASCII
 [ 1.4.2 ] add command line options
 [ 1.4.3 ] set DEBUG_MODE in Makefile instead of the header file
+[ 1.6.1 ] fix problem with MUMPS: cannot find package
+[ 1.6.2 ] allow users to set compilers, e.g. using CC, CXX
 [       ] add subrouties for general purpose tests on matrices and vectors
 [       ] enforce ANSI C standard: do not allow C99
-[       ] allow users to set compilers, e.g. using CC, CXX
 [       ] fix problem with UMFPACK when it is installed alone without CHOLMOD
-[       ] fix problem with MUMPS: cannot find package
 
 ========================
 GMG 	
